--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "react",
-    "target": "ES6",
+    "target": "ESNext",
     "allowJs": true,
     "module": "commonjs",
     "skipLibCheck": true,
